# GameEngine

./: .gitignore  CMakeLists.txt  init.sh  projectclean.sh  releaseinit.sh
Data/: CMakeLists.txt  GenerateCMakeLists.sh  config.xml
Data/Shaders/: BasicTexturing.frag  BasicTexturing.vert  PCF_ShadowMapping.frag  PCF_ShadowMapping.vert  ShadowMapping.frag  ShadowMapping.vert  VSM.frag  VSM.vert  WriteDepth.frag
Data/Shaders/VSM/: VSM.frag  VSM_StoreMoments.frag  VSM_StoreMoments.vert
Data/sponza/: sponza.mtl
Documentation/: ConfigTemplate.xml  ConfigurationFileTemplate.xml  RequirementsSpecification.txt
lib/: README.txt
lib/linux/: README.txt
lib/win32/freeglut260/Debug/: freeglut.lib
lib/win32/freeglut260/Release/: freeglut.lib
src/: AntTweakBarFunctions.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  Camera.h  EngineConfig.cpp  EngineConfig.h  GameTime.h  GraphicsObject.cpp  GraphicsObject.h  Light.h  Mat44.cpp  Mat44.h  Material.h  Mesh.cpp  Mesh.h  Namable.h  OBJLoader.cpp  OBJLoader.h  PerfTimer.h  Quaternion.cpp  Quaternion.h  RenderTarget.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderManager.h  ShaderObject.cpp  ShaderObject.h  ShaderSet.cpp  ShaderSet.h  Sphere.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  color.h  ctypes.h  (+13 more)
src/oldcode/: ShaderObject.cpp  ShaderObject.h  ShaderSet.h
